--- a/VRChat/84/1264484.html
+++ b/VRChat/84/1264484.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "WL5cqgHo8z6kwqMSCTsg0zgVZEAP44zKpDQ9pQAKfSs="></script>
+    "mDL9JG2EFwUU9xSUkO+rXGYx8swXJ9zqowht5oXGAfE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[Vケット2\u00263]LipSyncVisualizer ","description":"★内容物\n音声を可視化する電子デバイスです。\n\n一型は　一直線に並んだゲージが上に向かって動くようになっています。\n\n二型は　上下にゲージがあり、両方が連動して動くようになっています。\n\n三型は　波形グラフのような動きをするものです。　デバイスなどに装着するなどを想定しています。\nまた三型のみβ機能として、形状変化機能が搭載されています。\nデフォルトだと直線状ですが、形状変化を入れると半円状になりこれ単一でのデバイス感をUPします。\n\n四型は　円形で波形グラフのような動きをするものです。\n円形で首に付けたり頭に付けてリングにするなどの使い方を想定しています。\n\n\n☆★どちらもテクスチャなどはなく、モデルのFBXのみとなっています。★☆\n\n何か不具合があれば @Yorin_vrc までお願いします。\n\n\n\n更新履歴:一型のシェイプキーにミスがあったのでVer1.01に更新。恐らく変化は殆ど無いはずなので既にアバターに付けていたとしてもFBX更新で問題なく更新できると思います。\n\n\n\n\n\n★利用規約\n\n◎モデルデータの利用可能範囲\nVRchat以外での利用\t：可\n再配布\t：不可\nモデル改変\t：可\nデータ流用\t：不可\nデータ形式の変換\t：制限あり（制限内容：自分が他の環境で使うための変換はOKです。但し動作保証はしかねます。）\nアバターペデスタルへの配置\t：不可\n商用利用\t：不可\n収益動画への出演\t：可\n性的な表現/グロテスクな表現\t：可\n\nこのデータを使用したことによって起きたいかなることについてYorinは責任は持ちません。","url":"https://booth.pm/ja/items/1264484","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"300","highPrice":"550"},"image":"https://booth.pximg.net/c/620x620/c6dcf68b-82ac-4294-953d-6f3b88111206/i/1264484/0cbf2be5-1097-4a81-86cc-9756caa8f0a2_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="WL5cqgHo8z6kwqMSCTsg0zgVZEAP44zKpDQ9pQAKfSs="></script>
+    nonce="mDL9JG2EFwUU9xSUkO+rXGYx8swXJ9zqowht5oXGAfE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1264484/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               237
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1264484/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               237
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
