--- a/VRChat/27/1169527.html
+++ b/VRChat/27/1169527.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Anx4PDMSBlkG2fE1XKAvI3XwYjDFCNSxUYEEx39cqSI="></script>
+    "ZgXmmKGbRn5X1ibfI/bJ0HbGT+nSzDakWrF+YE9BPko="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRchatアバター想定3Dモデル ｢Hologroid｣","description":"※※※注意事項※※※\n　この商品は2019年に頒布したVRCSDK2専用のHologroidです。\n　VRCSDK3に対応した新作アバターのHologroid2とは別商品であり、\n　内容が異なりますので、お間違えの無いようお気を付けください。\n　https://nyarbera.booth.pm/items/4076902\n\nVRChatでのアバター利用を想定した、ホログラムで衣服や髪を投影する\n機械人形｢Hologroid(ホログロイド)｣の3Dモデルです。\n改変しやすいよう、パーツごとにメッシュを分けたデータも\n同梱しているほか、ホログラムの色変更だけであれば、\nUnity内のマテリアルの色変えのみで行うことが出来ます。\nShaderはReflex Shader 2.2を使用しています。\n\n映像制作やゲーム等でもお使いいただけるほか、\nシンプルなVRMデータ3色(Red、Blue、Green)を同梱しており、\nclusterやバーチャルキャストなどの\nVRM対応ソフトやサービスなどでも簡単にお使いいただけます。\n\nまたおまけとして、Oculus Quest版VRChatで利用できる\nQuest版最適化アバターを追加しています。\n(PC版想定のものを無理矢理軽量化しているため、見た目に多少の差異があり、色改変にはPC版と違いテクスチャの改変が必要です)\n\n◆モデルスペック\n・ポリゴン数\n　通常版:三角ポリゴン18456　Quest版:三角ポリゴン4871\n　（ホログラムを除くと△12176ポリゴン(Quest版2903)となります）\n・表情アニメーション:9種類(両バージョン共通)\n\n◆データ内容\n・VRChatアバターとしてアップロード出来る状態の\n　unitypackageファイル(VRChatSDK2用)\n　\n◎本unitypackageを利用するには、予めUnityのプロジェクトにVRCSDK2とReflex Shader 2.2をインポートしておく必要があります。\n\n・Textureファイル(png)\n・fbxファイル6種類\n　通常版、Quest版、各3種類\n　　(最軽量版、軽量メッシュ分け版、詳細メッシュ分け版)\n･VRMファイル3種類\n　(Red、Blue、Greenの3色)","url":"https://booth.pm/ja/items/1169527","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/30e40a33-a2bf-4dc4-9660-e928b5be7148/i/1169527/8cb666bd-58eb-43b6-b4d0-f556c59f8650_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Anx4PDMSBlkG2fE1XKAvI3XwYjDFCNSxUYEEx39cqSI="></script>
+    nonce="ZgXmmKGbRn5X1ibfI/bJ0HbGT+nSzDakWrF+YE9BPko="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1169527/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               474
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1169527/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               474
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
