--- a/VRChat/43/1264443.html
+++ b/VRChat/43/1264443.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "TvMwLNusTcVF05TnbzU/gwaxPNrzRa57oDW4rX5unoo="></script>
+    "9fWuSznTPW09/YeQ6yCc59KxxyPc549ERLZEx9PpofU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル３Dモデル　スチームパンク風ハット","description":"商品内容\n・unity package\n・FBX形式モデルデータ\n・テクスチャー１枚\n・利⽤規約\nバーチャルマーケット2出店、CRY Eng. の\nメロンソーダと冷麺 @theebjc1 です\nアバターのあるシーンにprefabをドラッグ＆ドロップし\n追従してほしい場所（スケルトン、アーマチュアなどのheadなど）に配置\nお好みの⼤きさ、⾓度などに調整してからモデルをアップロードしてください\n※オーバーライドアニメーションなどの設定は割愛させていただきます\nご了承ください\n__________________________________________________________________\n※※※利⽤規約※※※\n※著作権について※\n・当モデルおよび関連データの著作権は製作者の\nメロンソーダと冷麺 @theebjc1\nに帰属するものとします\n※禁⽌⾏為について※\n・VRChat向けとありますがゲームや撮影などそれ以外のコンテンツでもご⾃由にお使い\nください（商⽤、⾮商⽤問わず）\n使う際には⼀報いれて頂けると喜びます︕\n・改変はご⾃由にどうぞ\n・改変、⾮改変に関わらず再配布、転売の禁⽌\n・公序良俗に反する⾏為、宗教的、政治的利⽤\n他者に対する誹謗中傷⽬的での利⽤の禁⽌\n※免責事項※\n・モデルデータを利⽤して発⽣したいかなる損害、損失、その他不利益などには⼀切の責\n任を負いません\nこの利⽤規約は予告なく変更する場合があります\n＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿\nポリゴン数 △4792","url":"https://booth.pm/ja/items/1264443","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/a34842f5-5430-4f0c-958c-ae3c9c17a04e/i/1264443/ca1d980b-883d-4344-8b90-bc589a845e3d_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="TvMwLNusTcVF05TnbzU/gwaxPNrzRa57oDW4rX5unoo="></script>
+    nonce="9fWuSznTPW09/YeQ6yCc59KxxyPc549ERLZEx9PpofU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1264443/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               15
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1264443/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               15
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
