--- a/VRChat/66/1264366.html
+++ b/VRChat/66/1264366.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "0F7ehfaAbYOOLybkvdHPl1DByBcnUMNrsc6GA1R1nKE="></script>
+    "fVz0LqcYEJveHORGyS+RNxFup2wfrROQpSOthrIzsg8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【DL版】拝啓、VRCはじめました。","description":"C95似てひっそりとコピ本で配布していたVRChatの体験記です。\n実際のフレンドとの交流で起きたことや会話元にしております。\n\n6p 1430*2000 PNG形式\n\n","url":"https://booth.pm/ja/items/1264366","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/adf1c9ae-eb80-4af9-a73d-25ca1092fcec/i/1264366/935b07a4-41cb-4252-b04a-6ed07a7563c6_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="0F7ehfaAbYOOLybkvdHPl1DByBcnUMNrsc6GA1R1nKE="></script>
+    nonce="fVz0LqcYEJveHORGyS+RNxFup2wfrROQpSOthrIzsg8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1264366/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               26
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1264366/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               26
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
